finish with main functions